@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.446 2006/12/19 14:51:34 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.447 2006/12/19 15:09:58 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -356,6 +356,8 @@ PH/53 Added missing "#include <time.h>" to pcre/pcretest.c (this was a PCRE
 
 PH/54 Applied Robert Bannocks' patch to avoid a problem with references that
       arises when using the Solaris LDAP libraries (but not with OpenLDAP).
+
+PH/55 Check for a ridiculously long file name in exim_dbmbuild.
 
 
 Exim version 4.63
